xine-lib (1.1)

xine-lib (1.0.2)
  * fixed xxmc / xvmc mocomp / IDCT rendering errors caused by the big update. 
  * support --enable-fpic with recent versions of gcc
  * clip goom fps value to >= 1 [bug #1193783]

xine-lib (1.0.1)
  * Big XvMC quality / correctness / cpu-usage fix. [bug #1114517] 
  * fixed builds with Xv or the entire X11 unavailable
  * updated internal copies of VCD libraries to libcdio 0.71 and vcdimager 0.7.21
  * fixed compatibility with new libtool versions [bug #1094262]
  * renamed input.http_no_proxy to media.network.http_no_proxy
  * tightened no-proxy domain matching & added exact host match ('=' prefix)
  * assume that front ends can handle tabs (ffmpeg pp plugin help text)
  * fixed MMS/ASF chained stream bug
  * Shoutcast: fixed meta info handling
  * MMST: fixed incorrect command length
  * fixed end of stream detection with AVI files
  * added support for WMA Voice codec
  * added limited support for character entities to the XML parser
  * fixed support of icecast 2 server
  * fixed some memleaks related to DVD playback and MPEG PES
  * fixed PNG/MNG image distortion and incorrect colouring
  * fixed build on solaris and other platforms [bugs #1062987, #1114677 and
    #1115001]
  * published documentation about Win32 platform
  * brand new DirectX audio output plugin for Windows
  * updated win32 MSVC port
  * used only ASCII characters for C locale
  * fixed cropping and zooming with vidix
  * fixed status reporting to honour IDLE status as documented
  * fixed aborts on DVB channel switching [bug #1090707]
  * updated vidix to 0.9.9
  * plugin description accessor functions (may load plugins)
  * fixed translations, they were not used in some cases
  * Win32 port updates: cross compilation of VCD, external ffmpeg with MSVC
  * fixed pthread leak
  * fixed onefield_xv deprecated deinterlace method
  * multiple slice-per-rows (HDTV) fixes in the libmpeg2 code, particularly 
    regarding VLD XvMC.